Fixed icons to have proportion spaces and avoid double column to avoid overflow show.

--- a/css/jquery.styly.css
+++ b/css/jquery.styly.css
@@ -4,23 +4,23 @@
 	background-image: url('../img/icons.png');
 	background-repeat: no-repeat;
 	cursor: pointer;
+	font: 11px verdana;
 	display: block;
 	height: 20px;
-	padding-left: 29px;
-	padding-top: 5px;
-	width: 25px;
+	padding-left: 30px;
+	padding-top: 6px;
 }
 
-.styly-checkbox .styly-unchecked			{ background-position: 0 -4px;   }
-.styly-checkbox .styly-checked				{ background-position: 0 -149px; }
-.styly-checkbox .styly-unchecked-hover		{ background-position: 0 -68px;  }
-.styly-checkbox .styly-checked-hover		{ background-position: 0 -223px; }
-.styly-checkbox .styly-unchecked-disabled	{ background-position: 0 -289px; cursor: default !important; }
-.styly-checkbox .styly-checked-disabled		{ background-position: 0 -347px; cursor: default !important; }
+.styly-checkbox .styly-unchecked			{ }
+.styly-checkbox .styly-unchecked-hover		{ background-position: 0 -50px;  }
+.styly-checkbox .styly-checked				{ background-position: 0 -100px; }
+.styly-checkbox .styly-checked-hover		{ background-position: 0 -150px; }
+.styly-checkbox .styly-unchecked-disabled	{ background-position: 0 -200px; cursor: default !important; }
+.styly-checkbox .styly-checked-disabled		{ background-position: 0 -250px; cursor: default !important; }
 
-.styly-radio .styly-unchecked				{ background-position: -108px -4px;   }
-.styly-radio .styly-unchecked-hover			{ background-position: -108px -68px;  }
-.styly-radio .styly-checked					{ background-position: -108px -149px; }
-.styly-radio .styly-checked-hover			{ background-position: -108px -223px; }
-.styly-radio .styly-unchecked-disabled		{ background-position: -108px -289px; cursor: default !important; }
-.styly-radio .styly-checked-disabled		{ background-position: -108px -347px; cursor: default !important; }
+.styly-radio .styly-unchecked				{ background-position: 0 -300px; }
+.styly-radio .styly-unchecked-hover			{ background-position: 0 -350px; }
+.styly-radio .styly-checked					{ background-position: 0 -400px; }
+.styly-radio .styly-checked-hover			{ background-position: 0 -450px; }
+.styly-radio .styly-unchecked-disabled		{ background-position: 0 -500px; cursor: default !important; }
+.styly-radio .styly-checked-disabled		{ background-position: 0 -550px; cursor: default !important; }
